package com.tca.designpattern.structure.adapter;

import lombok.extern.slf4j.Slf4j;

/**
 * @author zhouan
 * @Date 2021/01/14
 */
@Slf4j
public class Cooker {

    public void cook(){
        log.info("i am a cooker, now i am cooking");
    }
}
