package com.tca.designpattern.structure.adapter;

import lombok.extern.slf4j.Slf4j;

/**
 * @author zhouan
 * @Date 2021/01/14
 */
@Slf4j
public class Programmer {

    public void program() {
        log.info("i am a programmer, now i am programing");
    }
}
